# DarkBottomLine

./: Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml
bottom_line/metaconditions/: Era2017_RR-31Mar2018_v1.json  Era2017_legacy_v1.json  Era2017_legacy_xgb_v1.json  Era2018_legacy_v1.json  Era2018_legacy_xgb_v1.json  Era2022_v1.json  __init__.py
bottom_line/scripts/: HHbbgg_DD_Estimate.py  Zpt_rwgt_json.py  btagging_eff.py  categorisation.py  get_unprocessed_files.py  make_correction_json.py  pull_files.py  run_analysis.py
bottom_line/scripts/fiducial/: fiducial_xsec_calculator.py
bottom_line/scripts/plotting/: plot_settings.json  plotting_utils.py
bottom_line/scripts/postprocessing/: convert_parquet_to_root.py  merge_parquet.py  prepare_output_file.py  prepare_root_for_tree2ws_diff.py  sample_gen_binning.json
bottom_line/scripts/samples/: download_files.py  fetch_datasets.py
bottom_line/selections/: HHbbgg_selections.py  diphoton_selections.py  jet_selections.py  lepton_selections.py  lepton_selections_Zmmy.py  lumi_selections.py  object_selections.py  photon_selections.py  photon_selections_lowmass.py  sv_selections.py
bottom_line/submission/: lxplus.py
bottom_line/systematics/: EGM_SS_systematics.py  __init__.py  electron_systematics.py  event_weight_systematics.py  factories.py  jet_systematics.py  jet_systematics_json.py  muon_systematics.py  photon_systematics.py  registry.py  utils.py
bottom_line/tools/: EELeak_region.py  EcalBadCalibCrystal_events.py  SC_eta.py  chained_quantile.py  decorrelator.py  diphoton_mva.py  diphoton_mva_lowmass.py  doublecrystalball.py  dykiller_lowmass.py  flow_corrections.py  gen_helpers.py  hpc_mva.py  mass_decorrelator.py  photonid_mva.py  sigma_m_tools.py  truth_info.py
bottom_line/tools/decorrelation_CDFs_dumper/: CDFdecorrelator.py
bottom_line/utils/: dumping_utils.py  logger_utils.py  misc_utils.py  runner_utils.py
bottom_line/workflows/: HHbbgg.py  Zmmy.py  __init__.py  base.py  btagging.py  diphoton_training.py  dystudies.py  hpc_processor.py  lowmass.py  particleLevel.py  stxs.py  top.py  zee_processor.py
bottom_line/workflows/taggers/: DummyTagger1.py  DummyTagger2.py  __init__.py  ptTagger.py  yTagger.py
docs/: environment.yml
docs/source/: concepts.rst  conf.py  developers.rst  examples.rst  index.rst  installation.rst  jobs.rst  postprocessing.rst
docs/source/modules/: higgs_dna.metaconditions.corrections.rst  higgs_dna.metaconditions.diphoton.rst  higgs_dna.metaconditions.photon_id_mva_weights.rst  higgs_dna.metaconditions.rst  higgs_dna.rst  higgs_dna.samples.rst  higgs_dna.selections.rst  higgs_dna.submission.rst  higgs_dna.systematics.rst  higgs_dna.tools.rst  higgs_dna.utils.rst  (+3 more)
notebooks/: basics.ipynb
tests/: test_cat.json  test_nanoAOD_contents.py  test_package.py  test_parquet_scripts.py  test_photonid_mva.py  test_processors.py  test_processors_creation.py  test_samples.py  test_selections.py  test_utils.py
tests/config_files/: runner_v13_base.json  runner_v13_tagandprobe.json  v13_samples.json
tests/samples/: phoid_mva.root
(+31 files in other folders)
